Fix container overlapping

--- a/personal-portfolio/css/style.css
+++ b/personal-portfolio/css/style.css
@@ -750,14 +750,17 @@ button.btn-1:hover {
 
 #icon-1 {
   margin-left: 3.8rem;
+  margin-top: 6px;
 }
 
 #icon-2 {
   margin-left: 3.8rem;
+  margin-top: 6px;
 }
 
 #icon-3 {
   margin-left: 3.8rem;
+  margin-top: 6px;
 }
 
 li.languages {
